--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                                     <p class="card-text">Nueva gorra Jordan Nike, conocer la neuva gorra con diferentes
                                         colores.</p>
                                 </div>
-                                <div class="text-body-secondary mx-3">
+                                <div class="text-body-secondary mx-3 d-flex justify-content-between align-items-center">
                                     <p>Oferta, últimos 3 días</p>
+                                    <p class="badge text-bg-success">Success</p>
                                 </div>
                             </div>
                         </div>
@@ -70,8 +71,9 @@
                                     <p class="card-text">¡Nuevo dispositivo, apple anuncia el dispositivo del año, ven y
                                         conocer el nuevo iPhone</p>
                                 </div>
-                                <div class="text-body-secondary mx-3">
+                                <div class="text-body-secondary mx-3 d-flex justify-content-between align-items-center">
                                     <p>Oferta, últimos 3 días</p>
+                                    <p class="badge text-bg-success">Success</p>
                                 </div>
                             </div>
                         </div>
@@ -84,8 +86,9 @@
                                     <p class="card-text">Ven y conocer el nuevo dispositivo que samsung ha presentado,
                                         ahora en oferta</p>
                                 </div>
-                                <div class="text-body-secondary mx-3">
+                                <div class="text-body-secondary mx-3 d-flex justify-content-between align-items-center">
                                     <p>Oferta, últimos 3 días</p>
+                                    <p class="badge text-bg-success">Success</p>
                                 </div>
                             </div>
                         </div>
@@ -143,10 +146,9 @@
                     <!--Primera card-->
                     <div class="col">
                         <div class="card">
-                            <div class="card-header">
-                                Dime tus dudas
-                                <img src="https://www.logo.wine/a/logo/Facebook_Messenger/Facebook_Messenger-Logo.wine.svg"
-                                    width="30" height="24" />
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span>Dime tus dudas</span>
+                                <img src="https://www.logo.wine/a/logo/Facebook_Messenger/Facebook_Messenger-Logo.wine.svg" width="30" height="24" />
                             </div>
                             <div class="card-body">
                                 <form class="row">
@@ -173,7 +175,7 @@
             </div>
         </div>
         <!--Footer-->
-        <footer class="text-lg-start bg-body-tertiary">
+        <footer class="text-lg-start bg-body-tertiary ">
             <div class="p-4">
                 Amazon 2024
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
